# AutoCAD_MCP

./: .gitignore  AutoCAD_Reasearch_RPT_02.md  AutoCAD_Research_01.md  AutoCAD_Research_RPT_01.md  AutoCAD_Research_RPT_02.md  BRUTAL_REALITY_ASSESSMENT.md  CLAUDE.md  COMPREHENSIVE_TESTING_EXPANSION_PLAN.md  COMPREHENSIVE_TESTING_FRAMEWORK_SUMMARY.md  CONTRIBUTING.md  DAMAGE_CONTROL_PLAN.md  DEPLOYMENT_GUIDE.md  Dockerfile  Gemini.md  HANDOFF_PROMPT.md  Integration_Strategy_Document.md  LICENSE  MCP_CONFIG_README.md  MCP_INTEGRATION_TESTS_SUMMARY.md  MCP_SETUP.md  MCP_Tools_Specification.md  MD_Formatting.md  PHASE1_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_WEEK7_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_PLAN.md  PROJECT_TRACKER.md  QUALITY_AND_DOCUMENTATION_PLAN.md  QUALITY_BASELINE_METRICS.md  README.md  REGRESSION_TESTS_SUMMARY.md  ROADMAP.md  SESSION_ACCOMPLISHMENTS.md  SESSION_EXECUTION_LOG.md  SESSION_HANDOFF.md  SESSION_SUMMARY_2025-08-13_Endgame_03_Branch_Creation.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md  TEST_AUTOMATION_STRATEGY_RESULTS.md  Technical_Architecture_Document.md  (+48 more)
.claude/agents/: ai-engineer.md  architect-review.md  autocad-specialist.md  cloud-architect.md  context-manager.md  incident-responder.md  mlops-engineer.md  performance-engineer.md  prompt-engineer.md  quant-analyst.md  risk-manager.md  security-auditor.md
.github/workflows/: security-scan.yml
Improvements/: Improvements_01.md  Improvements_02.md  Improvements_Overview.md  Research_Planning.md  Technical_Architecture_Document.md
NewSpiral/: 3d_building.py  autocad_client.py  demo_floorplan.py  realistic_walls.py  simple_3d.py  simple_demo.py  working_3d.py
NewSpiral/OriginalVBA/: Module1.bas  UserForm1.frm
NewSpiral/examples/: README.md  building_floor_plan.py  data_driven_design.py  mechanical_part.py
PRPs/: example-prp-autocad-mcp.md
PRPs/ai_docs/: autodesk_api.md  flask.md  numpy_scipy.md  pyautocad.md
PRPs/templates/: prp_base.md  prp_planning_base.md  prp_spec.md
Spiral_DOCS/: PRD_Module_Handrail.md  PRD_Module_Pickets.md
commands/: __init__.py  handoff.py  pickup.py
docs/: 00-README-First.md  01-Installation-Setup.md  02-Basic-Drawing-Operations.md  03-AI-Code-Generation.md  04-AI-Code-Generation.md  04-API-Recommendations.md  05-3D-Surface-Unfolding.md  05-API-Recommendations.md  06-3D-Surface-Unfolding.md  06-Parametric-Design.md  07-Parametric-Design.md  07-Pattern-Optimization.md  08-Deployment-Automation.md  08-Pattern-Optimization.md  09-Deployment-Automation.md  09-Mock-AutoCAD-System.md  10-Mock-AutoCAD-System.md  10-Troubleshooting-Guide.md  11-FAQ.md  11-Troubleshooting-Guide.md  ARCHITECTURAL_RECONSTRUCTION_PLAN.md  AutoCAD_MCP_Summary.md  AutoCAD_Research.txt  CLAUDE.md  CRITICAL_MODULES_TEST_REPORT.md  PRD.md  PROJECT_TRACKER_ARCHIVE.md  README.md  USER_STORIES.md  algorithm_integration_guide.md  backward-compatibility-requirements.md  development-workflow-enhanced.md  enhancement-specification.md  feature-checklist.md  implementation-roadmap.md  implementation_roadmap.md  master-coder-architecture.md  master-coder-development-plan.md  mcp-api-specification.md  mcp_tools_specification.md  (+14 more)
docs/api-reference/: 01-API-Recommendations.md  mcp-api-specification.md  openapi-specification.yaml
docs/developer/: 02-Mock-AutoCAD-System.md  02a-Mock-AutoCAD-System-Legacy.md  backward-compatibility-requirements.md  migration-path.md  surface-unfolding-algorithm.md  testing-validation.md
docs/development/: POLYFACE_MESH_RESEARCH.md  development-workflow.md  phase1-implementation-plan.md  phase2-implementation-plan.md  roadmap.md
docs/getting-started/: 00-README-First.md  01-Installation-Setup.md  02-Your-First-Success.md
docs/legacy/: mcp-client-library.md  roo-code-compatibility.md  vscode-integration.md
docs/project/: AutoCAD_MCP_Summary.md  COMPREHENSIVE_TESTING_EXPANSION_PLAN.md  COMPREHENSIVE_TESTING_FRAMEWORK_SUMMARY.md  Integration_Strategy_Document.md  MCP_INTEGRATION_TESTS_SUMMARY.md  PRD.md  REGRESSION_TESTS_SUMMARY.md  Technical_Architecture_Document.md  USER_STORIES.md  graph_TB.mmd  implementation-roadmap.md  master-coder-architecture.md  mission.md  session_handoff.md
docs/security/: security_analysis_false_positive_debugger.md  security_analysis_false_positive_secure_evaluator.md
docs/use-cases/: architecture-engineering.md  education-training.md  manufacturing.md  product-design.md
docs/user-guide/: 01-Basic-Drawing-Operations.md  02a-AI-Code-Generation-Legacy.md  04-Parametric-Design.md  04a-Parametric-Design-Legacy.md  05-Pattern-Optimization.md  06-Troubleshooting-Guide.md  07-FAQ.md
docs_for_drafters/: 00-README-First.md  01-Installation-Setup.md  02-Your-First-Success.md  03-Basic-Drawing-Operations.md  05-Troubleshooting-Guide.md  06-FAQ.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml
monitoring-tools/: MONITORING_TOOLS_GUIDE.md
src/: config.py  decorators.py  dimensioning.py  mcp_server.py  pattern_optimization.py  server.py  utils.py
src/ai_features/: ai_code_generator.py  api_recommendation_engine.py  automated_code_reviewer.py  error_prediction_engine.py  natural_language_processor.py
src/algorithms/: __init__.py  geodesic.py  lscm.py  mesh_utils.py
src/code_generation/: __init__.py  autolisp_generator.py  language_coordinator.py  python_generator.py  template_manager.py  validation_engine.py  vba_generator.py
src/core/: __init__.py  lazy_loader.py
src/documentation/: __init__.py  api_documenter.py  code_example_generator.py  tutorial_generator.py
src/enhanced_autocad/: __init__.py  compatibility_layer.py  connection_manager.py  enhanced_wrapper.py  error_handler.py  performance_monitor.py
src/enterprise/: collaboration_architecture.py  deployment_automation.py  monitoring_dashboard.py  performance_optimization.py  security_monitoring.py
standards/: best-practices.md  code-style.md  tech-stack.md
test_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  conftest_enhanced.py  cross_platform_conftest.py  test_server.py
(+76 files in other folders)
