
[project]
name = "autocad-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for AutoCAD 2025"
authors = [
    {name = "AutoCAD MCP Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["autocad", "mcp", "3d", "cad", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pyautocad = "^0.2.0"
numpy = "^2.1.0"
scipy = "^1.14.1"
pypiwin32 = "^223"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.20"
mcp = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
ruff = "^0.5.5"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
